# Auto_Foss_Compliance

./: CMakeLists.txt  README.md
.github/workflows/: compliance.yml
compliance/: generate_notice.py  license_allowlist.json  requirements.txt  validate_licenses.py
src/: extra_1.c  extra_2.c  extra_3.c  extra_4.c  extra_5.c  feature_a.c  feature_b.c  main.c  script_use_third.py  util.c
